--- a/index.html
+++ b/index.html
@@ -74,40 +74,50 @@
         <div class="op-clientes-slide">
             <div id="carouselExampleIndicators" class="carousel slide">
                 <div class="carousel-indicators">
-                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1" hidden></button>
+                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2" hidden></button>
+                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3" hidden></button>
+                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4" hidden></button>
                 </div>
                 <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <p class="d-block w-100">“Quero agradecer <strong>toda a atenção</strong> que recebi desta empresa desde o primeiro contato. Se fosse feita uma pesquisa de satisfação, com certeza eu diria que vocês são <strong>excelentes</strong>! Estou satisfeitíssimo com a Tupan e recomendo a qualquer um que me perguntar.” </p><span class="wrap"><span>Edílson</span></span>
+                  <div class="carousel-item ci2 active">
+                    <p class="d-block w-30">“Quero agradecer <strong>toda a atenção</strong> que recebi desta empresa desde o primeiro contato. Se fosse feita uma pesquisa de satisfação, com certeza eu diria que vocês são <strong>excelentes</strong>! Estou satisfeitíssimo com a Tupan e recomendo a qualquer um que me perguntar.” </p><span class="wrap"><span>Edílson</span></span>
                   </div>
-                  <div class="carousel-item">
-                    <p class="d-block w-100">“Só tenho a agradecer o <strong>comprometimento, a atenção e o pós-venda</strong> que tiveram comigo. A peça chegou certinho e foi tudo muito bom! Empresas assim merecem sempre o bom feedback dos clientes, <strong>estou muito satisfeito</strong>.” </p>
-                    <span></span>
+                  <div class="carousel-item ci2">
+                    <p class="d-block w-30">“Só tenho a agradecer o <strong>comprometimento, a atenção e o pós-venda</strong> que tiveram comigo. A peça chegou certinho e foi tudo muito bom! Empresas assim merecem sempre o bom feedback dos clientes, <strong>estou muito satisfeito</strong>.” </p>
+                    <span>Rubélio</span>
                   </div>
-                  <div class="carousel-item">
-                    <p class="d-block w-100">“Obrigado pelo kit enviado e pela <strong>pontualidade na entrega</strong>. Parabéns para a equipe Tupan.” </p>
-                    <span></span>
+                  <div class="carousel-item ci2">
+                    <p class="d-block w-30">“Obrigado pelo kit enviado e pela <strong>pontualidade na entrega</strong>. Parabéns para a equipe Tupan.” </p>
+                    <span>Jose</span>
                   </div>
-                  <div class="carousel-item">
-                    <p class="d-block w-100">“Quero agradecer por todo suporte que foi prestado, <strong>desde a agilidade na entrega e a cordialidade nas conversas</strong>. Já recomendava a marca para muitas pessoas e <strong>vou continuar</strong> fazendo o mesmo.” </p>
-                    <span></span>
+                  <div class="carousel-item ci2">
+                    <p class="d-block w-30">“Quero agradecer por todo suporte que foi prestado, <strong>desde a agilidade na entrega e a cordialidade nas conversas</strong>. Já recomendava a marca para muitas pessoas e <strong>vou continuar</strong> fazendo o mesmo.” </p>
+                    <span>Marilsa</span>
                   </div>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                <button class="prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev" >
                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                   <span class="visually-hidden">Previous</span>
                 </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                <button class="next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next" >
                   <span class="carousel-control-next-icon" aria-hidden="true"></span>
                   <span class="visually-hidden">Next</span>
                 </button>
               </div>
         </div>
     </div>
-    <div id="blog"></div>
+    <div id="blog">
+      <div class="titulo"><h2>BLOG</h2></div>
+
+      <div class="cards-div">
+        <div class="card-div"><img src="./assets/imgs/blog1.avif" alt="" class="img-card"><p class="data">8 de abril de 2024</p><h3>As curiosidades mais surpreendentes sobre assentos sanitários!</h3><p>Você já parou para pensar em quantas inovações e peculiaridades existem por trás de algo tão cotidiano quanto um assento sanitário? A Tupan Assentos separou algumas das curiosidades mais interessantes…</p></div>
+        <div class="card-div"><img src="./assets/imgs/blog2.png" alt="" class="img-card"><p class="data">21 de março de 2024</p><h3>Qual o melhor assento sanitário: almofadado, oco ou de madeira?</h3><p>Todos os dias recebemos perguntas de consumidores querendo saber se os assentos sanitários almofadados, ocos ou de madeira são bons. Nossa resposta é simples e direta: nenhum deles é um…</p></div>
+        <div class="card-div"><img src="./assets/imgs/blog3.webp" alt="" class="img-card"><p class="data">21 de novembro de 2022</p><h3>Por que banheiro é WC?</h3><p>Você já se perguntou por que a sigla WC é utilizada para identificar banheiros ao redor do mundo todo? A explicação é bem simples: a sigla WC surgiu na Inglaterra…</p></div>
+        <div class="card-div"><img src="./assets/imgs/blog4.jpg" alt="" class="img-card"><p class="data">15 de julho de 2021</p><h3>Como comprar o assento sanitário certo para o meu vaso em 3 passos</h3><p> Uma das maiores dificuldades ao comprar um assento sanitário é saber qual modelo se encaixa perfeitamente na bacia do banheiro. Nós da Tupan, temos várias formas de te ajudar, desde…</p></div>
+      </div>
+    </div>
+    <a href="https://wa.link/c38b17" target="_blank" class="contact"><img src="./assets/imgs/whatsapp.png" alt=""></a>
     <div id="localizacao"></div>
     <footer id="footer"></footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
