--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
                 <li><a href="#protecao" class="til">A Tupan</a></li>
                 <li><a href="#">Nossos Assentos</a></li>
                 <li><a href="#diferenciais">Diferenciais</a></li>
-                <li><a href="">Blog</a></li>
-                <li><a href="">Contato</a></li>
+                <li><a href="#blog">Blog</a></li>
+                <li><a href="#footer">Contato</a></li>
                 <a href=""><img src="./assets/imgs/facebook.png" alt="" class="icon"></a>
                 <a href=""><img src="./assets/imgs/instagram.png" alt="" class="icon final-icon"></a>
                 
@@ -118,8 +118,36 @@
       </div>
     </div>
     <a href="https://wa.link/c38b17" target="_blank" class="contact"><img src="./assets/imgs/whatsapp.png" alt=""></a>
-    <div id="localizacao"></div>
-    <footer id="footer"></footer>
+    <div id="localizacao">
+        <div class="mapa"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3658.460396295318!2d-46.79994872474168!3d-23.515937859924804!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ceff798beda9d7%3A0xba4defbf4157c785!2sTupan%20Assentos!5e0!3m2!1spt-BR!2sbr!4v1713352920768!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+        <div class="div-localizacao">
+          <h2>Onde estamos</h2>
+          <span><img src="./assets/imgs/mapas-e-bandeiras.png" alt="" ></span>
+          <p>Rua Vicente Rodrigues da Silva, 1.000 – Jardim Piratininga Osasco SP – Brasil <br>
+            CEP 06230-098</p>
+            <span><img src="./assets/imgs/o-email.png" alt=""></span>
+            <p>tupan@tupan.ind.br</p>
+        </div>
+    </div>
+    <footer id="footer">
+      <div class="col1">
+        <h3>ATENDIMENTO</h3>
+        <h4>Grande São Paulo:</h4>
+        <p>(11) 3697-5100</p>
+
+        <h4>Demais Localidades:</h4>
+        <p>0800 704 6837</p>
+      </div>
+      <div class="col1">
+        <h4>Segunda à Sexta-feira</h4>
+        <p>08hs às 17hrs</p>
+      </div>
+      <div class="col1">
+        <h4>Redes Sociais</h4>
+        <span><img src="./assets/imgs/facebook.png" alt="" class="icon"></span>
+        <span><img src="./assets/imgs/instagram.png" alt="" class="icon"></span>
+      </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 
